# openclaw-manager

./: .gitignore  README.md  README_zh.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  config_batch_tests.rs  diagnostics.rs  installer.rs  installer_tests.rs  logs.rs  mod.rs  process.rs  service.rs  service_tests.rs  skills.rs
src-tauri/src/models/: config.rs  detection.rs  detection_tests.rs  mod.rs
src-tauri/src/utils/: cache.rs  cache_tests.rs  log_sanitizer.rs  log_sanitizer_tests.rs  mod.rs  shell.rs
src-tauri/src/utils/cache/: cache_tests.rs
src-tauri/tests/: README_PERFORMANCE_TESTS.md  cache_integration_tests.rs  config_tests.rs  detection_tests.rs  env_check_tests.rs  performance_tests.rs  service_tests.rs  settings_batch_tests.rs
src/components/AIConfig/: index.tsx
src/components/Agents/: index.tsx
src/components/Channels/: index.tsx
src/components/Dashboard/: QuickActions.tsx  StatusCard.tsx  SystemInfo.tsx  index.tsx
src/components/Layout/: Header.tsx  Sidebar.tsx
src/components/Logs/: index.tsx
src/components/MCP/: index.tsx
src/components/Service/: index.tsx
src/components/Settings/: index.tsx
src/hooks/: useService.ts
src/i18n/: index.ts  types.ts
src/lib/: fileExport.ts  tauri.ts
src/stores/: appStore.ts
src/styles/: globals.css
src/types/: environment.ts  index.ts
tests/: README.md
tests/frontend/: setup.ts  tsconfig.json  vitest.config.ts
(+40 files in other folders)
