[package]
name = "openclaw-manager"
version = "0.1.0"
description = "OpenClaw Cross-Platform Manager"
authors = ["OpenClaw Team"]
edition = "2021"

[lib]
name = "openclaw_manager"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
serde_yaml = "0.9"
regex = "1"
once_cell = "1"
tauri-plugin-updater = "2"
ureq = { version = "2", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
default = []
performance-tests = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
